Fix width on mobile devices issue

--- a/public/index.css
+++ b/public/index.css
@@ -34,7 +34,6 @@ h1, h2, h3, h4, h5 {
 
 h1 {
   margin: auto 0 inherit auto;
-  max-width: 32rem;
   font-size: 3.052em;
 }
 
